--- a/src/index.scss
+++ b/src/index.scss
@@ -20,13 +20,9 @@ a {
   color: white;
   text-decoration: inherit;
 }
-a:hover {
-  // color: #535bf2;
-  color: lightgrey;
-}
 
 body {
-  margin: 0;
+  // margin: 0;
   /* display: flex;
   place-items: center;
   min-width: 320px;
